--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,13 @@
 cmake_minimum_required(VERSION 3.15)
 project(resumo CXX)
 
+
 find_package(Poco REQUIRED)
 
-add_executable(resumo src/Resumo.cpp src/main.cpp)
-
+add_library(resumo src/Resumo.cpp)
+target_include_directories(resumo PUBLIC include)
 target_link_libraries(resumo Poco::Crypto)
 
-install(TARGETS resumo DESTINATION "."
-        RUNTIME DESTINATION bin
-        ARCHIVE DESTINATION lib
-        LIBRARY DESTINATION lib
-        )
+
+set_target_properties(resumo PROPERTIES PUBLIC_HEADER "include/Resumo.h")
+install(TARGETS resumo)
